<resources>
    <string-array name="round_number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="app_name">Catan tournament</string>
    <string name="action_add_player">Afegeix jugadors</string>
    <string name="dialog_enter_player_name_hint">Nom del jugador</string>
    <string name="dialog_enter_player_nickname_hint">Nickname del jugador</string>
    <string name="dialog_enter_player_name_error">El nom no pot estar buit</string>
    <string name="dialog_enter_player_nick_error">El nick no pot estar buit</string>
    <string name="player_list_title">Llista de participants</string>
    <string name="player_view_holder_menu_modify">Modificar</string>
    <string name="player_view_holder_menu_delete">Eliminar</string>
    <string name="menu_item_player_list_title">Llistat</string>
    <string name="menu_item_player_classification">Classificació</string>
    <string name="classification_title">Classificació</string>
    <string name="classification_header_name">Nom</string>
    <string name="classification_header_points">P.</string>
    <string name="classification_header_victory_points">PV.</string>
    <string name="classification_header_big_trading_route">RC.</string>
    <string name="classification_header_cavalry_army">EC.</string>
    <string name="menu_item_player_encounters">Enfrontaments</string>
    <string name="matches_title">Enfrontaments</string>
    <string name="matches_fragment_round">Ronda</string>
    <string name="classification_header_position">#</string>
    <string name="matches_screen_empty_view_title">Clica per a generar un nou torneig</string>
    <string name="matches_screen_empty_view_button">generar</string>
    <string name="create_tournament_dialog_description">Cuantes rondes vols generar?</string>
    <string name="matches_menu_reset">Reset</string>
</resources>
