<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_padding_xs"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/classification_header_points" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_padding_xs"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/classification_header_victory_points" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/victory_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_padding_xs"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/classification_header_big_trading_route" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/big_trading_route_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_padding_xs"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/classification_header_cavalry_army" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/big_cavalry_army_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10" />
    </LinearLayout>
</LinearLayout>